--- a/application/system/view/user/index.html
+++ b/application/system/view/user/index.html
@@ -8,15 +8,16 @@
     <title>用户管理</title>
 </head>
 <body>
-    <div class="demoTable">
+    <div style="margin: 20px 0">
         搜索内容：
         <div class="layui-inline">
             <input class="layui-input" name="search_content" id="user_search_id" autocomplete="off">
         </div>
-        <button class="layui-btn layui-btn-radius" style="margin-left: 30px;" data-type="reload">搜索</button>
+        <button class="layui-btn" style="margin-left: 30px; border-radius: 7px;" data-type="reload">搜索</button>
+        <button class="layui-btn layui-btn-normal" style="margin-left: 30px; border-radius: 7px;" id="user_operation_id">新增用户</button>
     </div>
-    <table class="layui-hide" id="user_list_id" lay-filter="demo"></table>
-    <script type="text/html" id="barDemo">
+    <table class="layui-hide" id="user_list_id" lay-filter="user_list"></table>
+    <script type="text/html" id="operationBar">
         <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="detail">查看</a>
         <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
         <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
