系统功能开发

--- a/application/system/view/index/index.html
+++ b/application/system/view/index/index.html
@@ -39,7 +39,7 @@
             <li class="layui-nav-item">
                 <a href="javascript:;">
                     <img src="http://t.cn/RCzsdCq" class="layui-nav-img">
-                    {$user_info->user_name}
+                    {$user_info->name}
                 </a>
                 <dl class="layui-nav-child">
                     <dd><a href="javascript:;">基本资料</a></dd>
