基本功能模块开发

--- a/application/system/view/customer/index.html
+++ b/application/system/view/customer/index.html
@@ -21,6 +21,8 @@
         <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="detail">查看</a>
         <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
         <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
+        <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="view_record">拜访记录</a>
+        <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="add_record">添加记录</a>
     </script>
 </body>
 </html>
