--- a/application/system/view/sales/form.html
+++ b/application/system/view/sales/form.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
     <title>表单</title>
 </head>
-<body user_type="{$classify?$classify:''}">
+<body login_user_type="{$login_user_type?$login_user_type:''}">
 <form class="layui-form" action="{$rootPath}" method="post">
     <input type="hidden" name="user_id" value="{$user_id?$user_id:''}">
     <div class="layui-form-item">
